# CreditScore

./: app.py  config.py  main.py  pyproject.toml
calc/: model.py
data/: create_df.py  model_data.py
utils/: utils.py
